# youtube_etl_pipeline

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  main.py  pyproject.toml
common/: pyiceberg_common.py  s3_common.py  youtube_common.py
dags/: youtube_pipeline.py
extract/: extract.py  ytb_playlist_extract.py  ytb_playlist_extract_polars.py  ytb_playlistitems_extract.py
streamlit-dashboard/: dashboard.py
terraform/: locals.tf  main.tf
terraform/modules/ecr/: ecr.tf  output.tf
terraform/modules/ecs/: data.tf  ecs.tf  variables.tf
terraform/modules/tf-state/: variables.tf
transform/: config.yaml  transform_playlist.py  transform_playlist_items.py
